crates/worker-macros/tests/oneshot/no_input-fail.stderr
error: expected 1 argument
 --> tests/oneshot/no_input-fail.rs:2:10
  |
2 | async fn Worker() -> u32 {
  |          ^^^^^^
