crates/worker-macros/tests/oneshot/no_input-fail.rs
#[gloo::worker::oneshot::oneshot]
async fn Worker() -> u32 {
    0
}

fn main() {}
